--- a/package.json
+++ b/package.json
@@ -1,28 +1,38 @@
 {
-  "name": "orlomed-admin-web",
-  "version": "0.1.0",
+  "name": "orlomed_admin_web",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "tailwindcss -i ./html_src/input.css -o ./web/output.css --watch",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
     "next": "14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@mui/material": "^5.15.10",
-    "@mui/icons-material": "^5.15.10",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
-    "typescript": "^5.3.3",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0"
-  }
-} 
+    "eslint-config-next": "14.1.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
+  },
+  "description": "Flutter Admin Web with Tailwind CSS processing.",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs"
+}
