--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,25 +8,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
-  firebase_core: ^2.27.1
-  firebase_auth: ^4.17.9
-  cloud_firestore: ^4.15.9
-  firebase_storage: ^11.6.10
-  firebase_auth_web: ^5.9.9
-  firebase_storage_web: ^3.6.17
-  cloud_firestore_web: ^3.8.10
-  intl: ^0.18.0
-  file_selector: ^1.0.2
-  just_audio: ^0.9.36
-  url_launcher: ^6.1.7
-  webview_flutter: ^4.8.0
-  video_player: ^2.8.1
-  audioplayers: ^6.0.0
-  flutter_html: ^3.0.0
-  go_router: ^14.2.0
-  html: ^0.15.6
+  cupertino_icons: ^1.0.2
+  go_router: ^14.8.1
+  firebase_auth: ^4.20.0
+  firebase_core: ^2.32.0
+  cloud_firestore: ^4.17.5
+  firebase_storage: ^11.7.7
+  provider: ^6.1.2
+  file_selector: ^1.0.3
+  audioplayers: ^6.4.0
+  video_player: ^2.8.6
+  url_launcher: ^6.3.0
+  firebase_app_check: ^0.2.2+6
+  flutter_quill: ^9.2.3
+  webview_flutter: ^4.7.0
   webview_flutter_web: ^0.2.3+4
+  flutter_html: ^3.0.0-beta.2
+  html: ^0.15.4
+  web: ^0.5.1
 
 dev_dependencies:
   flutter_test:
