feat: Implement comprehensive user management with Firebase Functions integration
- Add AdminService for Cloud Functions API calls
- Implement user reset to default functionality
- Add bulk operations with checkbox selection mode
- Integrate token cleanup and manual refund features
- Add EXPIRED status handling and improved status display
- Enhance subscription details with end dates and trial periods
- Add confirmation dialogs for critical operations
- Support for 5-day free trial restart (freeTrialStartDate/EndDate)
- Add printing and pdf dependencies

--- a/firebase.json
+++ b/firebase.json
@@ -3,6 +3,7 @@
     "rules": "firestore.rules"
   },
   "hosting": {
+    "site": "orlomed-f8f9f",
     "public": "build/web",
     "ignore": [
       "firebase.json",
