--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,9 @@ dependencies:
   base32: ^2.2.0
   qr_flutter: ^4.1.0
   pinput: ^5.0.1
-  printing: 5.13.1
-  pdf: 3.11.1
+  http: ^1.1.0
+  printing: ^5.13.1
+  pdf: ^3.11.1
 
 dev_dependencies:
   flutter_test:
