--- a/firebase.json
+++ b/firebase.json
@@ -3,7 +3,7 @@
     "rules": "firestore.rules"
   },
   "hosting": {
-    "site": "orlomed-f8f9f",
+    "site": "lomedu-user-web",
     "public": "build/web",
     "ignore": [
       "firebase.json",
