--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   http: ^1.1.0
   printing: ^5.13.1
   pdf: ^3.11.1
+  cloud_functions: ^4.7.6
 
 dev_dependencies:
   flutter_test:
