--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.5.3
   flutter_svg: ^2.2.1
 
+  device_info_plus: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
