--- a/firebase.json
+++ b/firebase.json
@@ -15,6 +15,14 @@
         "source": "**",
         "destination": "/index.html"
       }
+    ],
+    "headers": [
+      {
+        "source": "/**",
+        "headers": [
+          { "key": "Cache-Control", "value": "no-store, must-revalidate" }
+        ]
+      }
     ]
   }
 }
