chore(firebase): add functions config with node18 and europe-west1

--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,9 @@
 {
+  "functions": {
+    "source": "functions",
+    "runtime": "node18",
+    "region": "europe-west1"
+  },
   "firestore": {
     "rules": "firestore.rules"
   },
