--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "source": "functions",
-    "runtime": "node18",
+    "runtime": "nodejs18",
     "region": "europe-west1"
   },
   "firestore": {
