--- a/functions/package.json
+++ b/functions/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "firebase-admin": "^11.10.1",
-    "firebase-functions": "^5.1.0"
+    "firebase-functions": "^5.1.0",
+    "nodemailer": "^6.9.9"
   }
 }
