feat: SimplePay logo integráció és reszponzív javítások
- SimplePay hivatalos logo widget létrehozása (simplepay_logo.dart)
  * Kötelező link a Fizetési Tájékoztatóra
  * Új ablakban nyílik meg
  * Alt/title/semantic attribútumok
  * Reszponzív méretezés (mobil/tablet/desktop)
  * Error handling debug üzenetekkel

- SimplePay logo beillesztése:
  * web_payment_plans.dart - fizetési csomagok oldalon
  * subscription_renewal_button.dart - kártya nézetben
  * account_screen.dart - fiók adatok oldalon

- Reszponzív javítások account_screen.dart-ban:
  * LayoutBuilder használata reszponzív elrendezéshez
  * Mobil nézet: gombok egymás alatt, teljes szélességben
  * Desktop nézet: gombok egymás mellett, Wrap-ben
  * SimplePay logo reszponzív méretezése (80% mobil, 360px desktop)

- Assets hozzáadása:
  * simplepay_bankcard_logos_left_482x40_new.jpg (használt)
  * simplepay_bankcard_logos_top_02_new.png (tartalék)

SimplePay követelmények teljesítve (9.6.5 - Logo megjelenítése)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: orlomed_admin_web
 description: Admin web interface for OrLomed
-version: 1.0.0+10
+version: 1.0.0+12
 environment:
   sdk: '>=3.0.0 <4.0.0'
 
@@ -59,3 +59,5 @@ flutter:
 
   assets:
     - assets/images/login_LOGO.png
+    - assets/images/simplepay_bankcard_logos_top_02_new.png
+    - assets/images/simplepay_bankcard_logos_left_482x40_new.jpg
