IrĂˇnyĂ­tĂłszĂˇm-telepĂĽlĂ©s autocomplete funkciĂł implementĂˇlĂˇsa
- Python script hozzĂˇadva az Excel fĂˇjl JSON-ba konvertĂˇlĂˇsĂˇhoz
- postal_codes.json fĂˇjl generĂˇlva (3038 irĂˇnyĂ­tĂłszĂˇm, 340 tĂ¶bb telepĂĽlĂ©ses)
- ShippingAddressDialog frissĂ­tve autocomplete funkciĂłval:
  - Automatikus telepĂĽlĂ©s kitĂ¶ltĂ©s 1 telepĂĽlĂ©s esetĂ©n
  - Dropdown lista tĂ¶bb telepĂĽlĂ©s esetĂ©n
  - ValĂłs idejĹ± keresĂ©s 4 szĂˇmjegy beĂ­rĂˇsakor
- pubspec.yaml frissĂ­tve az Ăşj asset fĂˇjllal

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: orlomed_admin_web
 description: Admin web interface for OrLomed
-version: 1.0.1+4
+version: 1.0.1+9
 environment:
   sdk: '>=3.0.0 <4.0.0'
 
@@ -63,3 +63,4 @@ flutter:
     - assets/images/login_LOGO.png
     - assets/images/simplepay_bankcard_logos_top_02_new.png
     - assets/images/simplepay_bankcard_logos_left_482x40_new.jpg
+    - assets/postal_codes.json
