--- a/functions/package.json
+++ b/functions/package.json
@@ -7,8 +7,11 @@
     "lint": "echo 'No linting configured'"
   },
   "dependencies": {
+    "fast-xml-parser": "^5.3.2",
     "firebase-admin": "^13.5.0",
     "firebase-functions": "^6.5.0",
+    "form-data": "^4.0.5",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.9"
   }
 }
